# html-to-vst-machine

./: README.md  package.json
.github/workflows/: build-plugin.yml
api/: server.js
builder/: make-dummy-plugin.sh
builder/juce-plugin/: CMakeLists.txt
builder/juce-plugin/Assets/UI/: ampex_ui.html
builder/juce-plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
builder/juce-plugin/ui/: index.html
converter/: parsePluginSpec.js  testExample.js
examples/: example-plugin.html
generator/: currentSpec.json  generateJuceParams.js
spec/: plugin-format.md
